@startuml
title Admin Dashboard - Model Class Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 0
skinparam dpi 170
skinparam defaultFontName Arial
skinparam classFontName Arial
skinparam classAttributeFontName Consolas
skinparam classAttributeIconSize 0
skinparam classBorderColor #263238
skinparam classBackgroundColor #FAFCFD
skinparam classHeaderBackgroundColor #DCEEF8
skinparam ArrowColor #263238
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 160
skinparam ranksep 140
hide circle

class User <<model>> {
  -id: String {UUID}
  -employerPartnerId: String [0..1]
  -email: String {unique}
  -status: UserStatus = ACTIVE
  -createdAt: DateTime
  --
  +isVerified(): Boolean
  +isActive(): Boolean
}

class Attraction <<model>> {
  -id: String {UUID}
  -partnerId: String
  -title: String
  -status: AttractionStatus = DRAFT
  -publicationStatus: AttractionPublicationStatus = PAUSED
  -publishedAt: DateTime [0..1]
  -archivedAt: DateTime [0..1]
  -createdAt: DateTime
  --
  +isPublished(): Boolean
  +isOwnedBy(partnerId: String): Boolean
}

class PartnerProfile <<model>> {
  -id: String {UUID}
  -userId: String {unique}
  -status: PartnerStatus = PENDING
  -createdAt: DateTime
  --
  +isApproved(): Boolean
}

class Booking <<model>> {
  -id: String {UUID}
  -userId: String
  -status: BookingStatus = PENDING_PAYMENT
  -createdAt: DateTime
  --
  +isPaid(): Boolean
  +isRefundable(at: DateTime): Boolean
}

class Payment <<model>> {
  -id: String {UUID}
  -bookingId: String
  -duplicateOfPaymentId: String [0..1]
  -amount: Decimal
  -status: PaymentStatus = PENDING
  -isDuplicate: Boolean = false
  -createdAt: DateTime
  --
  +isSucceeded(): Boolean
  +matchesAmount(amount: Decimal): Boolean
}

PartnerProfile "0..1" -- "0..*" User : staffMembers
PartnerProfile "1" -- "0..*" Attraction : attractions
User "1" *-- "0..1" PartnerProfile : partnerProfile
User "1" -- "0..*" Booking : bookings
Booking "1" *-- "0..*" Payment : payments
Payment "0..1" -- "0..*" Payment : duplicatePayments
Attraction "0..1" -- "0..*" Booking : snapshotBookings

@enduml
